--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body ul {
   padding: 0px;
 }
 
+.langs__link {
+  text-decoration: none;
+}
+
 .black__line {
   background-color: #000;
   color: #000;
