--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,10 @@ body {
     }
 }
 
+.langs__link {
+    text-decoration: none;
+}
+
 .black__line {
     background-color: #000;
     color: #000;
